--- a/.gitignore
+++ b/.gitignore
@@ -56,7 +56,7 @@ cover/
 *.pot
 
 # Django stuff:
-*.log
+# *.log # Log disappeared. Going to try this **************************
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
